# mumble-bot

./: .env.sample  Cargo.toml  README.md
src/: main.rs  ping.rs
