[package]
name = "mumble_bot"
version = "0.1.0"
authors = [""]
edition = "2018"
default-run = "mumble_bot"

[[bin]]
name = "mumble_bot"
path = "src/main.rs"

[dependencies]
serenity = { version = "0.11", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"
byteorder = "1.4.3"
async-std = "1.0.0"
